updating images and closing issues

--- a/src/javascript/templates/patient1/patient1View23.hbs
+++ b/src/javascript/templates/patient1/patient1View23.hbs
@@ -27,7 +27,7 @@
                         <li>
                             <span class="white">No.03</span>
                         </li>
-                        <li class="border-bottom">Gene Expression</li>
+                        <li class="border-bottom">Molecular Testing</li>
                         <!-- TODO - MAKE THIS TIED TO COLLECTION -->
                     </ul>
                 </div>
@@ -53,7 +53,7 @@
                         <li>
                             <span>No.04</span>
                         </li>
-                        <li>Conclusions</li>
+                        <li>Treatment Recommendations</li>
                         <!-- TODO - MAKE THIS TIED TO COLLECTION -->
                     </ul>
                 </div>
