--- a/src/javascript/templates/patient1/patient1View3.hbs
+++ b/src/javascript/templates/patient1/patient1View3.hbs
@@ -24,11 +24,11 @@
           </ul>
           <ul>
             <li><span>No.03</span></li>
-            <li class="border-bottom">Gene Expression</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
+            <li class="border-bottom">Molecular Testing</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
           </ul>
           <ul>
             <li><span>No.04</span></li>
-            <li>Conclusions</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
+            <li>Treatment Recommendations</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
           </ul>
         </div>
       </nav>
@@ -41,16 +41,14 @@
     </blockquote>
   <main id="content-main" class="row patient-1">
 
-    <p>Here is a normal mammogram.<br>
-&mdash;Note that there are dark and light areas that represent normal breast tissue.
+    <p>Here is a <strong>normal</strong> mammogram. Note that there are dark and light areas that represent normal breast tissue.
 
     </p>
        <figure>
          <img src="images/breast_scan3.jpg" alt="" />
        </figure>
         <p>
-        Here is an abnormal mammogram.<br>
-&mdash;Note that the red circled area contains an abnormally shaped or new abnormal area of white tissue.  Not all abnormal tissue is seen on a mammogram is cancerous.
+        Here is an <strong>abnormal</strong> mammogram. Note that the red circled area contains an abnormally shaped or new abnormal area of white tissue.  Not all abnormal tissue is seen on a mammogram is cancerous.
 
         </p>
         <figure>
