--- a/src/javascript/templates/patient1/patient1View6.hbs
+++ b/src/javascript/templates/patient1/patient1View6.hbs
@@ -35,11 +35,11 @@
 
                       <ul>
                         <li><span>No.03</span></li>
-                        <li class="border-bottom">Gene Expression</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
+                        <li class="border-bottom">Molecular Testing</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
                       </ul>
                       <ul>
                         <li><span>No.04</span></li>
-                        <li>Conclusions</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
+                        <li>Treatment Recommendations</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
                       </ul>
                     </div>
                   </nav>
@@ -48,10 +48,11 @@
         </div>
         <div class="col-md-6 col-md-offset-1 top-quote">
           <blockquote>
-        The biopsy is the first step in testing whether a breast abnormality seen on the mammogram or felt shows presence of cancer cells.          </blockquote>
+        The biopsy is the first step in testing whether a breast abnormality seen on the mammogram or felt shows the presence of cancer cells.
+      </blockquote>
         <main id="content-main" class="row patient-1">
 
-          <p>A biopsy is needed when the physician finds an abnormal area on a mammogram. Other symptoms indicating a biopsy is needed are any lumps that can be felt, bloody nipple discharge, and changes in the skin that may be suggestive of cancer.
+          <p class="margin-bottom ">A biopsy is needed when the physician finds an abnormal area on a mammogram. Other symptoms indicating a biopsy is needed are any lumps that can be felt, bloody nipple discharge, and changes in the skin that may be suggestive of cancer.
               </p>
 
               <div class="row continue-container background-nav-blue">
