--- a/src/javascript/templates/patient1/patient1View7-2.hbs
+++ b/src/javascript/templates/patient1/patient1View7-2.hbs
@@ -32,11 +32,11 @@
 
                       <ul>
                         <li><span>No.03</span></li>
-                        <li class="border-bottom">Gene Expression</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
+                        <li class="border-bottom">Molecular Testing</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
                       </ul>
                       <ul>
                         <li><span>No.04</span></li>
-                        <li>Conclusions</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
+                        <li>Treatment Recommendations</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
                       </ul>
                     </div>
                   </nav>
@@ -59,7 +59,7 @@
 Tissue sections are cut and placed onto a glass slide.
 
                             </p>
-                          <span class="left-arrow"><a class="top-fix" data-navigate="patient1view18">&#8594;</a></span>
+                          <span class="left-arrow"><a class="top-fix" data-navigate="patient1view7_3">&#8594;</a></span>
 
                       </div>
                   </div>
@@ -72,7 +72,7 @@ Tissue sections are cut and placed onto a glass slide.
 
                         </div>
                         <div class="col-md-4">
-                          <a data-navigate="patient1view7_3" class="continue next"><button type="button" name="button">Next &#8594;</button></a>
+                          <a data-navigate="patient1view7_3" class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
                         </div>
                       </div>
                   </div>
