--- a/src/javascript/templates/patient1/patient1View8.hbs
+++ b/src/javascript/templates/patient1/patient1View8.hbs
@@ -47,11 +47,11 @@
 
                       <ul>
                         <li><span>No.03</span></li>
-                        <li class="border-bottom">Gene Expression</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
+                        <li class="border-bottom">Molecular Testing</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
                       </ul>
                       <ul>
                         <li><span>No.04</span></li>
-                        <li>Conclusions</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
+                        <li>Treatment Recommendations</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
                       </ul>
                     </div>
                   </nav>
@@ -69,15 +69,15 @@
 
                 </p>
                 <h2>Normal</h2>
-
-                     <img class="magnify" class="zoom" data-magnify-src="images/BenignBreast_NORMAL.jpg" src="images/BenignBreast_NORMAL.jpg" alt="cell biopsy slide 3" />
-
+<figure>
+                     <img class="magnify one-hun" class="zoom" data-magnify-src="images/BenignBreast_NORMAL.jpg" src="images/BenignBreast_NORMAL.jpg" alt="cell biopsy slide 3" />
+</figure>
                     <p>
 Cancerous cells have a disordered appearance with large, irregular, different shapes and sizes with large nuclei.  They have no duct structures and stain more purple than pink.
                     </p>
-                    <h2>Cancer</h2>
+                    <h2>Cancerous</h2>
                     <figure>
-                      <img class="magnify" class="zoom" data-magnify-src="images/HE_Invasive.jpg" src="images/HE_Invasive.jpg" alt="cell biopsy slide 3" />
+                      <img class="magnify one-hun" class="zoom" data-magnify-src="images/HE_Invasive.jpg" src="images/HE_Invasive.jpg" alt="cell biopsy slide 3" />
                     </figure>
                   <div class="row continue-container background-nav-blue">
                       <div class="col-md-12 no-pad text-center">
