--- a/src/javascript/templates/patient1/patient1View9.hbs
+++ b/src/javascript/templates/patient1/patient1View9.hbs
@@ -43,14 +43,14 @@
                               <li>
                                   <span>No.03</span>
                               </li>
-                              <li class="border-bottom">Gene Expression</li>
+                              <li class="border-bottom">Molecular Testing</li>
                               <!-- TODO - MAKE THIS TIED TO COLLECTION -->
                           </ul>
                           <ul>
                               <li>
                                   <span>No.04</span>
                               </li>
-                              <li>Conclusions</li>
+                              <li>Treatment Recommendations</li>
                               <!-- TODO - MAKE THIS TIED TO COLLECTION -->
                           </ul>
                       </div>
@@ -68,7 +68,7 @@
                 <p>Does this tissue sample indicate the presence of cancer?
                             </p>
                      <figure>
-                       <img class="magnify one-hun" class="zoom" data-magnify-src="images/HE_Invasive.jpg" src="images/HE_Invasive.jpg" alt="cell biopsy slide 3" />
+                       <img class="magnify one-hun" class="zoom" data-magnify-src="images/HE_Invasive_Velma.jpg" src="images/HE_Invasive_Velma.jpg" alt="cell biopsy slide 3" />
 
                        <figcaption>
 Velma’s breast tissue sample
@@ -78,12 +78,12 @@ Velma’s breast tissue sample
 
 
                      <div class="col-md-2 yes-no col-sm-offset-3">
-                       <a  class="continue next"><button type="button" data-toggle="modal" data-target="#myModal2"  name="button">No &#10007;</button></a>
+                       <a  class="continue next"><button type="button" data-toggle="modal" data-target="#myModal2"  name="button">No</button></a>
                        <div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                          <div class="modal-dialog" role="document">
                            <div class="modal-content">
                              <div class="modal-body">
-                             <h2><span class="pink-hl">Incorrect.</span> The slide does contain cancer cells</h2>
+                             <h2><span class="pink-hl">Incorrect.</span> The slide does contain cancer cells.</h2>
                              </div>
                              <div class="modal-footer background-nav-blue">
                                <a href="/patient1view8" data-navigate="patient1view8" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Next &#8594;</button></a>
@@ -94,13 +94,13 @@ Velma’s breast tissue sample
                        </div>
                      </div>
                      <div class="col-md-2  col-sm-offset-2 yes-no">
-                       <a  class="continue next"><button  type="button"data-toggle="modal" data-target="#myModal"  name="button">Yes &#10003;</button></a>
+                       <a  class="continue next"><button  type="button"data-toggle="modal" data-target="#myModal"  name="button">Yes</button></a>
 
                        <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
                          <div class="modal-dialog" role="document">
                            <div class="modal-content">
                              <div class="modal-body">
-                             <h2><span class="pink-hl">Correct!</span> The slide does contain cancer cells</h2>
+                             <h2><span class="pink-hl">Correct!</span> The slide does contain cancer cells.</h2>
                              </div>
                              <div class="modal-footer background-nav-blue">
                                <a href="/patient1view10" data-navigate="patient1view10" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Next &#8594;</button></a>
@@ -123,7 +123,7 @@ Velma’s breast tissue sample
 
                           </div>
                           <div class="col-md-4">
-                              <a data-navigate="patient1view10" class="continue next">
+                              <a href="/patient1view10" data-navigate="patient1view10" class="continue next">
                                   <button type="button" name="button">Next &#8594;</button>
                               </a>
                           </div>
