--- a/src/javascript/templates/patient1/patient1View10.hbs
+++ b/src/javascript/templates/patient1/patient1View10.hbs
@@ -33,11 +33,11 @@
 
                             <ul>
                               <li><span>No.03</span></li>
-                              <li class="border-bottom">Gene Expression</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
+                              <li class="border-bottom">Molecular Testing</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
                             </ul>
                             <ul>
                               <li><span>No.04</span></li>
-                              <li>Conclusions</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
+                              <li>Treatment Recommendations</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
                             </ul>
                           </div>
                         </nav>
