--- a/src/javascript/templates/patient1/patient1View11.hbs
+++ b/src/javascript/templates/patient1/patient1View11.hbs
@@ -33,11 +33,11 @@
 
           <ul>
             <li><span>No.03</span></li>
-            <li class="border-bottom">Gene Expression</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
+            <li class="border-bottom">Molecular Testing</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
           </ul>
           <ul>
             <li><span>No.04</span></li>
-            <li>Conclusions</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
+            <li>Treatment Recommendations</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
           </ul>
         </div>
       </nav>
@@ -53,17 +53,17 @@
                 <main id="content-main" class="row patient-1 svg-test">
 
                   <p>
-                    Breast-conserving surgery: Only the part of the breast that contains cancerous tissue is removed.
+                    Breast-conserving surgery: Only the part of the breast that contains cancerous tissue is removed.<br><br>
 Mastectomy: The entire breast is removed.<br><br>
 
 Lymph node evaluation will be done with either surgery.<br><br>
 
 Surgery that conserves the breast is always the best approach unless there are factors indicating that mastectomy is required.<br><br>
 
-<strong>Velma had a right breast lumpectomy and a sentinel node lymph node biopsy.</strong>
+<strong>Velma had a right breast lumpectomy and a sentinal lymph node biopsy.</strong>
 
                   </p>
-                  
+
 
                       <div class="row continue-container background-nav-blue">
                           <div class="col-md-12 no-pad text-center">
@@ -74,7 +74,7 @@ Surgery that conserves the breast is always the best approach unless there are f
 
                             </div>
                             <div class="col-md-4">
-                              <a href="/patient1view12" data-navigate="patient1view12" class="continue next"><button class="muted" type="button" name="button">Next &#8594;</button></a>
+                              <a href="/patient1view12" data-navigate="patient1view12" class="continue next"><button class="" type="button" name="button">Next &#8594;</button></a>
                             </div>
                           </div>
                       </div>
