--- a/src/javascript/templates/patient1/patient1View17.hbs
+++ b/src/javascript/templates/patient1/patient1View17.hbs
@@ -18,7 +18,7 @@
           <div class="background-pink">
             <ul>
               <li><span class="white">No.03</span></li>
-              <li class="border-bottom">Gene Expression</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
+              <li class="border-bottom">Molecular Testing</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
             </ul>
           </div>
           <div class="row next-steps">
@@ -41,7 +41,7 @@
               </div>
             <ul>
               <li><span>No.04</span></li>
-              <li>Conclusions</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
+              <li>Treatment Recommendations</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
             </ul>
           </div>
         </nav>
