--- a/src/javascript/templates/patient1/patient1View2.hbs
+++ b/src/javascript/templates/patient1/patient1View2.hbs
@@ -24,11 +24,11 @@
           </ul>
           <ul>
             <li><span>No.03</span></li>
-            <li class="border-bottom">Gene Expression</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
+            <li class="border-bottom">Molecular Testing</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
           </ul>
           <ul>
             <li><span>No.04</span></li>
-            <li>Conclusions</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
+            <li>Treatment Recommendations</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
           </ul>
         </div>
       </nav>
@@ -42,25 +42,15 @@
   <main id="content-main" class="row patient-1">
 
     <p>Mammography is a screening technique that can detect early signs of breast cancer.
-    </p>
-    <p>
-      To take a mammogram, the breast is briefly pressed between two plates.
-    </p>
+      To take a mammogram, the breast is briefly pressed between two plates. Flattening the breast allows better penetration of X-rays, creating a sharper image.</p>
     <figure>
       <img src="images/patient_and_doctor.jpg" alt="" />
       <figcaption>
         This is a caption. Lorem ipsum dolor sin sit amet consectutor
       </figcaption>
     </figure>
-    <p>
-      Flattening the breast allows better penetration of X-rays, creating a sharper image.
-    </p>
-       <figure>
-         <img src="images/doctor_with_clipboard2.jpg" alt="" />
-         <figcaption>
-           This is a caption. Lorem ipsum dolor sin sit amet consectutor
-         </figcaption>
-       </figure>
+
+
        <div class="row continue-container background-nav-blue">
            <div class="col-md-12 no-pad text-center">
              <div class="col-md-4">
