--- a/src/javascript/templates/patient1/patient1View4.hbs
+++ b/src/javascript/templates/patient1/patient1View4.hbs
@@ -24,11 +24,11 @@
           </ul>
           <ul>
             <li><span>No.03</span></li>
-            <li class="border-bottom">Gene Expression</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
+            <li class="border-bottom">Molecular Testing</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
           </ul>
           <ul>
             <li><span>No.04</span></li>
-            <li>Conclusions</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
+            <li>Treatment Recommendations</li> <!-- TODO - MAKE THIS TIED TO COLLECTION -->
           </ul>
         </div>
       </nav>
@@ -37,20 +37,19 @@
   </div>
   <div class="col-md-6 col-md-offset-1 top-quote">
     <blockquote>
-      Here is Velma’s mammogram.
+      Review Velma’s mammogram and click on the area that shows an abnormality.
     </blockquote>
     <main id="content-main" class="row patient-1 svg-test">
 
       <p>
-        Review Velma’s mammogram and click on an area that shows abnormalities. <br>
-&mdash;If necessary, click Previous to review the normal mammogram.
+        Review Velma’s mammogram and click on an area that shows abnormalities. If necessary, click Previous to review the normal mammogram.
 
       </p>
       <div class="svg-container">
-        <div class="svg-text">Click any areas that show abnormalities.</div>
+        <div class="svg-text">Click the area that shows an abnormality.</div>
       <svg preserveAspectRatio="xMinYMin meet" class="svg-content" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
          width="100%" height="100%" viewBox="0 0 432 451.2" enable-background="new 0 0 432 451.2" xml:space="preserve">
-         <image width="432" height="451.2" xlink:href="images/mammo-test.png">
+         <image width="432" height="451.2" xlink:href="images/Mammogram_Right_Abnormal_Patient1-Velma.jpg">
          </image>
       <path class="cancer correct"  fill-rule="evenodd" clip-rule="evenodd" fill="none" d="M111.36,157.92l1.92-9.12l6.24,1.44l3.84,3.36l2.88-3.36l-0.96-5.76
         l6.24-1.44l0.96,5.28l6.24-4.8l0.48-6.24v-8.16l4.32-0.96l1.44-7.68l3.84-0.48l9.6-0.96l12,0.48l-0.96-4.32l-19.2-1.44l-9.6-6.24
