closed more issues

--- a/src/javascript/templates/screen2IntroView.hbs
+++ b/src/javascript/templates/screen2IntroView.hbs
@@ -6,11 +6,11 @@ Precision medicine is changing the face of cancer treatment.
 </h2>
 <p>In precision medicine, physicians consider an individual’s specific genes, medical history, environment, and lifestyle.  They use these factors – along with the specific characteristics of the  patient's tumor – to balance various options for  treatment and prevention of diseases, including breast cancer. This state-of-the-art approach reduces the chances of over-treating or under-treating breast cancer by tailoring treatment to each patient’s precise needs based on the characteristics of the tumor.
 </p>
-   <figure>
+   <figure class="margin-bottom-equal">
      <img class="one-hun" src="images/slide3.png" alt="" />
-     <figcaption>
-       This is a caption. Lorem ipsum dolor sin sit amet consectutor
-     </figcaption>
+
+        
+
    </figure>
 
    <h2>What role do genes play in cancer treatment?</h2>
