--- a/src/javascript/templates/startView.hbs
+++ b/src/javascript/templates/startView.hbs
@@ -13,15 +13,17 @@
         <img class="patient1" src="images/patient3-final.jpg">
     </div>
     <div class="col-md-7 no-pad">
+      <a class="no-link-color" href="/patient1view1" data-navigate="patient1view1">
         <div class="patient-title background-pink">
-            <h4>patient no1</h4>
+            <h4>patient no .01</h4>
             <h3>Velma Belt</h3>
         </div>
         <div class="row patient-copy">
             <p>
-                Velma is a 44&mdash;year old female. During her monthly breast self-exam, Velma felt a lump in her right breast. Velma's physician has ordered a mammogram to see if there is abnormal breast tissue. <a href="/patient1view1" data-navigate="patient1view1">click here to find out more.</a>
+                Velma is a 44&mdash;year old female. During her monthly breast self-exam, Velma felt a lump in her right breast. Velma's physician has ordered a mammogram to see if there is abnormal breast tissue.
             </p>
         </div>
+        </a>
     </div>
 </div>
 <div class="pick-patient col-md-8 col-md-offset-2 locked">
@@ -32,7 +34,7 @@
     <div class="col-md-7 no-pad ">
       <img class="lock" src="images/locked.png" alt="" />
         <div class="patient-title background-purple">
-            <h4>patient no2</h4>
+            <h4>patient no .02</h4>
             <h3>Michele Johnson</h3>
         </div>
         <div class="row patient-copy">
@@ -50,7 +52,7 @@
   <div class="col-md-7 no-pad ">
     <img class="lock" src="images/locked.png" alt="" />
   <div class="patient-title background-green">
-    <h4>patient no3</h4>
+    <h4>patient no .03</h4>
     <h3>Brittany Featherston</h3>
   </div>
     <div class="row patient-copy">
