--- a/src/javascript/templates/screen1IntroView.hbs
+++ b/src/javascript/templates/screen1IntroView.hbs
@@ -4,19 +4,19 @@
 <h2>What is this lab about?</h2>
 <p>In this Virtual Lab, you will follow a patient as she undergoes several tests used to gather critical information about her breast cancer.  You will learn about each test and how the results of each help physicians make decisions about treatment.  Later, you will guide a new patient through some of the tests and use the test results to recommend an appropriate treatment approach.
 </p>
-<figure>
-  <img class="one-hun" src="images/patient_and_doctor4.jpg" alt="" />
+<figure class="margin-bottom-equal">
+  <img class="one-hun" src="images/patient_and_doctor5.jpg" alt="" />
 </figure>
 
 
    <h2>Lab Tip</h2>
    <p>Be sure to download the Lab Handbook before you begin this lab. The Lab Handbook contains important reference information and graphic organizers for you to record your patient notes. Throughout this Virtual Lab, you will be prompted to use your Lab Handbook to record or collect information.
 </p>
-<figure>
-  <img class="one-hun" src="images/patient_and_doctor5.jpg" alt="" />
-  <figcaption>
-    This is a caption. Lorem ipsum dolor sin sit amet consectutor
-  </figcaption>
+<figure class="margin-bottom-equal">
+  <img class="one-hun" src="images/patient_and_doctor4.jpg" alt="" />
+
+
+
 </figure>
     <div class="row continue-container  ">
         <div class="col-md-12 no-pad text-center">
