--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -166,7 +166,9 @@ border-left: 3px solid white;
   border-top: 10px solid $pink;
   text-align:left;
 }
-
+.patients-container div:nth-child(5) {
+  margin-bottom: 6em;
+}
 
 .top-quote blockquote {
     margin: 0em 3em 2em 1em;
@@ -292,6 +294,10 @@ border-left: 3px solid white;
     padding-bottom: 10px;
     font-family: jaf-facitweb;
     font-weight: 100;
+    color: rgb(68, 68, 68)!important;
+    & a:link {
+      text-decoration: none;
+    }
     h3 {
       font-size: 20px;
     font-weight: 100;
@@ -346,8 +352,23 @@ border-left: 3px solid white;
     }
   }
 }
+.no-link-color {
+  position: absolute;
+  text-decoration: none!important;
+}
 .container-fluid {
 
+}
+.handbook-stu {
+  width: 184px;
+position: relative;
+right: -14px;
+top: -3px;
+}
+.margin-bottom-equal {
+  padding:0;
+  margin-bottom: 3em;
+  padding-right: 1em!important;
 }
 .top-nav {
   position: fixed;
@@ -428,7 +449,7 @@ top: -4px;
     li {
         color: $light-blue;
       &:nth-child(2) {
-        font-size:20px;
+        font-size:18px;
         color: white;
       }
 
