forcing new build changes

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -81,7 +81,7 @@ $largeMobileWidth:          "600px";
 $tabletWidth:               "768px";
 $desktopWidth:              "992px";
 $largeDesktopWidth:         "1392px";
-
+$modalFix:                  "@media only screen and (min-width:1200px) and (max-width: 1300px)";
 
 // Easing presets
 // --------------------------
