new build fixing patient1view5

--- a/src/javascript/templates/patient1/patient1View5.hbs
+++ b/src/javascript/templates/patient1/patient1View5.hbs
@@ -56,16 +56,17 @@
 	 width="100%" height="100%" viewBox="-14 283 639 225" enable-background="new -14 283 639 225" xml:space="preserve">
 <image overflow="visible" enable-background="new" width="639" height="225" xlink:href="images/pick-a-size.png"  transform="matrix(1 0 0 1 -14 283)">
 </image>
-<polygon class="size-1" points="105.06,182.87 112.35,177.52 115.75,168.29 112.83,158.09 107,152.26 102.14,148.37 94.85,148.37
-	85.13,154.2 81.73,164.4 83.68,175.09 90.96,180.92 "/>
-<polygon class="size-2" points="225.68,190.34 214.63,182.05 208,171 208,150.55 211.87,130.11 223.47,116.29 234.53,111.87
-	239.5,111.87 245.03,127.89 250,147.79 247.24,170.45 241.16,180.39 232.87,188.68 "/>
-<polygon class="size-3" points="381.02,188.26 377.31,184.55 369.36,180.84 358.23,174.48 352.4,166 346.57,142.15 346.57,124.13
-	356.11,107.7 363.8,98.16 378.37,92.86 395.33,98.16 411.23,113 416,120.42 416,142.68 416,158.05 408.05,170.24 400.63,178.19
-	390.56,181.37 385.79,184.55 "/>
-<polygon class="st0" points="562.42,188.26 553.3,183.43 541.5,181.28 527.02,158.22 518.97,139.98 518.97,123.88 525.41,101.35
-	531.31,90.09 542.04,80.97 550.08,76.67 558.13,73.46 564.57,71.31 573.15,74.53 577.44,78.82 593,86.87 601.58,97.06
-	608.56,114.76 608.56,138.9 600.51,157.14 590.85,170.02 582.27,178.6 574.76,182.36 569.93,186.65 "/>
+<polygon class="size-1" fill="transparent" points="105.06,474.87 112.35,469.52 115.75,460.29 112.83,450.09 107,444.26 102.14,440.37 94.85,440.37
+	85.13,446.2 81.73,456.4 83.68,467.09 90.96,472.92 "/>
+<polygon class="size-2" fill="transparent" points="225.68,482.34 214.63,474.05 208,463 208,442.55 211.87,422.11 223.47,408.29 234.53,403.87
+	239.5,403.87 245.03,419.89 250,439.79 247.24,462.45 241.16,472.39 232.87,480.68 "/>
+<polygon class="size-3" fill="transparent" points="381.02,480.26 377.31,476.55 369.36,472.84 358.23,466.48 352.4,458 346.57,434.15 346.57,416.13
+	356.11,399.7 363.8,390.16 378.37,384.86 395.33,390.16 411.23,405 416,412.42 416,434.68 416,450.05 408.05,462.24 400.63,470.19
+	390.56,473.37 385.79,476.55 "/>
+<polygon class="size-4" fill="transparent" points="562.42,480.26 553.3,475.43 541.5,473.28 527.02,450.22 518.97,431.98 518.97,415.88 525.41,393.35
+	531.31,382.09 542.04,372.97 550.08,368.67 558.13,365.46 564.57,363.31 573.15,366.53 577.44,370.82 593,378.87 601.58,389.06
+	608.56,406.76 608.56,430.9 600.51,449.14 590.85,462.02 582.27,470.6 574.76,474.36 569.93,478.65 "/>
+
 
 <g class="size-1-active">
 	<path fill="#DD307B" d="M507.983,467.996c-35.819,0-64.855-29.037-64.855-64.856c0-35.82,29.036-64.856,64.855-64.856
@@ -110,7 +111,7 @@
       <div class="col-md-4 line-across"></div>
       <div class="col-md-4">
         <!-- Button trigger modal -->
-        <a class="continue next"><button type="button muted"data-toggle="modal" data-target="#myModal"  name="button">Next &#8594;</button></a>
+        <a class="continue next"><button type="button muted" style="color: gray;cursor:default;" data-toggle="modal" data-target="#myModal"  name="button">Next &#8594;</button></a>
         <!-- Modal -->
         <div class="modal fade" id="modalCorrect" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
           <div class="modal-dialog" role="document">
@@ -119,7 +120,7 @@
                 <h2>Correct! Yes, it is about the size of a walnut.</h2>
               </div>
               <div class="modal-footer background-nav-blue">
-                <a href="/patient1view6" data-navigate="patient1view6" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Next &#8594;</button></a>
+                <a href="/patient1view6" data-navigate="patient1view6" class="continue"><button id="next-page" type="button" data-dismiss="modal" name="button">Continue &#8594;</button></a>
               </div>
             </div>
           </div>
@@ -131,7 +132,7 @@
                 <h2>Incorrect! Please try again.</h2>
               </div>
               <div class="modal-footer background-nav-blue">
-                <a class="continue close-modal"><button id="next-page" type="button" data-dismiss="modal" name="button">Next &#8594;</button></a>
+                <a class="continue close-modal"><button id="next-page" type="button" data-dismiss="modal" name="button">Try Again &#8594;</button></a>
               </div>
             </div>
           </div>
@@ -143,7 +144,7 @@
                 <h2>Incorrect! Please try again.</h2>
               </div>
               <div class="modal-footer background-nav-blue">
-                <a class="continue close-modal"><button id="next-page" type="button" data-dismiss="modal" name="button">Next &#8594;</button></a>
+                <a class="continue close-modal"><button id="next-page" type="button" data-dismiss="modal" name="button">Try Again &#8594;</button></a>
               </div>
             </div>
           </div>
@@ -155,7 +156,7 @@
                 <h2>Incorrect! Please try again.</h2>
               </div>
               <div class="modal-footer background-nav-blue">
-                <a class="continue close-modal"><button class="muted" id="next-page" type="button" data-dismiss="modal" name="button">Next &#8594;</button></a>
+                <a class="continue close-modal"><button class="" id="next-page" type="button" data-dismiss="modal" name="button">Try Again &#8594;</button></a>
               </div>
             </div>
           </div>
