--- a/src/javascript/templates/sideNavIntro.hbs
+++ b/src/javascript/templates/sideNavIntro.hbs
@@ -2,21 +2,21 @@
 
   <nav id="side-nav-intro" class="side-nav background-dark-blue">
     <ul>
-      <li><h3>{{ intro1.title }}</h3> {{ intro1.slide }}</li>
-      <li>{{ intro1.text}}</li> 
+      <li><h3>{{ intro1.title }}</h3></li>
+      <li>{{ intro1.text}}</li>
     </ul>
   </nav>
 
   <nav id="side-nav-1" style="display: none;" class="side-nav background-dark-blue">
     <ul>
-      <li><h3>{{ intro2.title }}</h3> {{ intro2.slide }}</li>
+      <li><h3>{{ intro2.title }}</h3></li>
       <li>{{ intro2.text}}</li>
     </ul>
   </nav>
 
   <nav id="side-nav-2" style="display: none;" class="side-nav background-dark-blue">
     <ul>
-      <li><h3>{{ intro3.title }}</h3> {{ intro3.slide }}</li>
+      <li><h3>{{ intro3.title }}</h3></li>
       <li>{{ intro3.text}}</li>
     </ul>
   </nav>
